/* Categories */ analyzing current categories

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -171,6 +171,34 @@ A significant minority of pages in the "Category:ideas" are missing the prefix i
 Problem 3:
 There are two templates, { { Wishlist } } and { { Unimplemented } } . Is that unnecessary redundancy, or is there a subtle distinction .
 
+=== Analyzing category structure ===
+
+{{Editing|Kempelen|2008/08/29|Discovering category structure}}
+
+Names are votes. See also: Too general category names above.
+
+Top level categories.
+
+* [[:Category:Categories]] - container for top level categories.
+** [[:Category:Community]]
+** [[:Category:Documentation]] (Remove: [[User:Kempelen|Kempelen]])
+** [[:Category:Hardware]]
+** [[:Category:Help]]
+** [[:Category:Information]] - (Remove: [[User:Kempelen|Kempelen]])
+** [[:Category:Openmoko]] - (Remove: [[User:Kempelen|Kempelen]])
+** [[:Category:Policy]] - Developer policies (OK: [[User:Kempelen|Kempelen]]) 
+** [[:Category:Software]] - (OK: [[User:Kempelen|Kempelen]])
+** [[:Category:Technical]] - (Remove: [[User:Kempelen|Kempelen]]) 
+** [[:Category:ToDo]] - The TODO template adds here (OK: [[User:Kempelen|Kempelen]])
+** [[:Category:User's Manual]] - 
+
+Subcategories of Software:
+
+* [[:Category:Software]] - Articles should not be added here.
+** [[:Category:Applications]] - ([[User:Kempelen|Kempelen]])
+** [[:Category:Distributions]] - ([[User:Kempelen|Kempelen]])
+** [[:Category:Software (non openmoko)]] - ([[User:Kempelen|Kempelen]])
+
 == DolfjeBot1 proposals ==
 Their is a bot on the openmoko wiki that's controlled by [[User:Dolfje]]. If you have tasks for the bot, please put them [[User:DolfjeBot1|here]].
 
