/* Analyzing category structure */ more data collected

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -157,7 +157,7 @@ A significant minority of pages in the "Category:ideas" are missing the prefix i
 Problem 3:
 There are two templates, { { Wishlist } } and { { Unimplemented } } . Is that unnecessary redundancy, or is there a subtle distinction .
 
-=== Analyzing category structure ===
+=== Category structure ===
 
 {{Editing|Kempelen|2008/08/29|Discovering category structure}}
 
@@ -178,12 +178,16 @@ Top level categories.
 ** [[:Category:ToDo]] - The TODO template adds here (OK: [[User:Kempelen|Kempelen]])
 ** [[:Category:User's Manual]] - 
 
-Subcategories of Software:
+Subcategories of Software. Looks well designed:
 
-* [[:Category:Software]] - Articles should not be added here.
-** [[:Category:Applications]] - ([[User:Kempelen|Kempelen]])
-** [[:Category:Distributions]] - ([[User:Kempelen|Kempelen]])
-** [[:Category:Software (non openmoko)]] - ([[User:Kempelen|Kempelen]])
+* [[:Category:Software]] - Articles should not be added here directly.
+** [[:Category:Applications]] - (OK: [[User:Kempelen|Kempelen]])
+** [[:Category:Distributions]] - (OK: [[User:Kempelen|Kempelen]])
+** [[:Category:Software (non openmoko)]] - (OK: [[User:Kempelen|Kempelen]])
+
+Applications category contains subcategories for various application groups, like GPS, Networking... This may be a problem if e.g. GPS belongs to Applications and Hardware too (and most of these stuff will belong to both). Maybe we could simply add articles to Applications AND GPS, which won't be subcategories of each other. [[User:Kempelen|Kempelen]] 20:54, 29 August 2008 (UTC)
+
+Basic End User and Advanced End User categories may need to be created instead User, which is not enough specific term. [[User:Kempelen|Kempelen]]
 
 == DolfjeBot1 proposals ==
 Their is a bot on the openmoko wiki that's controlled by [[User:Dolfje]]. If you have tasks for the bot, please put them [[User:DolfjeBot1|here]].
