illume-config-illume does apperently nothing

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -58,6 +58,8 @@ Long answer: [[Switching_Keyboards|here]].
 
 Short answer (theoretical): wait until the ''illume-config-illume'' package arrives in the repository, then install it with ''opkg''.
 
+Update: It is available in the testing feeds, but it does not give you the keyboard.
+
 === How to turn off the Qtopia keyboard ? ===
 
 Short answer: Add the line ''export QTOPIA_NO_VIRTUAL_KEYBOARD=1'' into the file ''/etc/X11/Xsession.d/89qtopia''.
