Category changes: -Information (general)

--- a/IPhone.mw
+++ b/IPhone.mw
@@ -106,7 +106,6 @@ Unconfirmed expandable with [http://www.techtree.com/India/News/Samsung_Readies_
 |[http://www.apple.com/retail/workshops/ Free Hands-on Workshops]
 |Set up an Openmoko event in your area!
  |}
-{{Languages|iPhone}}
+{{Languages}}
 
 [[Category:Neo FreeRunner Hardware]]
-[[Category:Information]]
