Category changes: -Information, +Neo FreeRunner Hardware/es.

--- a/IPhone%2Fes.mw
+++ b/IPhone%2Fes.mw
@@ -108,4 +108,4 @@ Expandible con [http://www.techtree.com/India/News/Samsung_Readies_8GB_microSD_C
  |}
 {{Languages|iPhone}}
 
-[[Category:Information]]
+[[Category:Neo FreeRunner Hardware/es]]
