Category changes: -Information, +Neo FreeRunner Hardware/fr

--- a/IPhone%2Ffr.mw
+++ b/IPhone%2Ffr.mw
@@ -101,4 +101,4 @@ Expandable with [http://www.techtree.com/India/News/Samsung_Readies_8GB_microSD_
  |}
 {{Languages|iPhone}}
 
-[[Category:Information]]
+[[Category:Neo FreeRunner Hardware/fr]]
