--- a/GUI_Style_Guidelines.mw
+++ b/GUI_Style_Guidelines.mw
@@ -76,6 +76,5 @@ Most on screen elements such as buttons and entry boxes are sub classed from the
 
 {{Languages|GUI_Style_Guidelines}}
 
-[[Category:Openmoko]]
+[[Category:Application Developer]]
 [[Category:User Interfaces]]
-[[Category:Information]]
