Cateogry changes: -Information, +Neo 1973 Hardware

--- a/Neo_1973_vs_Neo_FreeRunner.mw
+++ b/Neo_1973_vs_Neo_FreeRunner.mw
@@ -115,4 +115,4 @@ You can buy the debug board for USD 99.
  |}
 
 [[Category:Neo FreeRunner Hardware]]
-[[Category:Information]]
+[[Category:Neo1973 Hardware]]
