Category changes: -SHR Devel (nonexisting), -Openmoko, -Community, +System developers

--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -119,7 +119,5 @@ which is much faster.
 ==== General ====
 One thing to try is to unset all environment variables not listed in this page.  LIBPATH and INCLUDE can be particularly troublesome.
 
-[[Category:Openmoko]]
-[[Category:Community]]
 [[Category:SHR]]
-[[Category:SHR Devel]]
+[[Category:System Developers]]
