/* Option 1: With GSM multiplexing and with a GUI */

--- a/Manually_using_GPRS.mw
+++ b/Manually_using_GPRS.mw
@@ -6,11 +6,15 @@ The GPRS connection is made using the PPP protocol to a server identified by an 
 
 GSM multiplexing allows both a GPRS connection and a phone call to be handled at the same time.  By default, [[Om 2008.8]] does not multiplex the GSM device.  The [[FSO]] distribution, however, introduces GSM multiplexing with a new service and a DBus API to that service.  The instructions to modify the OM2008.8 distribution to make use of GSM multiplexing and allow you to start GPRS from a GUI can be found here: http://freeyourphone.de/portal_v1/viewtopic.php?f=21&t=295
 
-However, using those instructions, you will encounter a few hurdles.  Do not use the gsm0710muxd that is found in the OM2008.8 repository.  It will not work, instead, use the one found here:
+== gsm0710muxd from Angstrom Repositories ==
+
+However, using those instructions, you will encounter a few hurdles.  Do not use the gsm0710muxd that is found in the OM2008.8 repository.  It will not work, instead, use the one from the Angstrom Repositories (see [[Repositories]]).
+
+Alternatively, if you simply want to download all the packages, you can get them from here:
 
 http://www.angstrom-distribution.org/feeds/2008/ipk/glibc/armv4t/base/gsm0710muxd_0.9.1+gitr6fecc78198dd821bbe29efd096bd8fecd855179d-r0_armv4t.ipk
 
-In order to install that version of gsm0710muxd, however, you will also have to install a bunch of missing dependencies.  Those can be found by clicking on the dependencies found here:
+and the dependencies from here:
 
 http://www.angstrom-distribution.org/repo/?action=details&pnm=gsm0710muxd
 
