*Empty MediaWiki Message*

--- a/Openmoko_Local_Groups:_Los_Angeles.mw
+++ b/Openmoko_Local_Groups:_Los_Angeles.mw
@@ -11,7 +11,7 @@ Are there any other Openmoko community members here?
 |Jose De Jesus Sanchez Morones
 |Technology
 |Openmoko Fan
-|Visalia, as to make you want to write about it CA
+|Visalia, CA
 |
 |[[Image: MokoBox.jpg|center]]
 |-
