*Empty MediaWiki Message*

--- a/Openmoko_Local_Groups:_Los_Angeles.mw
+++ b/Openmoko_Local_Groups:_Los_Angeles.mw
@@ -10,7 +10,7 @@ Are there any other Openmoko community members here?
 |-
 |Jose De Jesus Sanchez Morones
 |Technology
-|Openmoko Fan
+|FreeRunner Fan
 |Visalia, CA
 |
 |[[Image: MokoBox.jpg|center]]
