/* Wish List .. sign language recognition */

--- a/ReMoko.mw
+++ b/ReMoko.mw
@@ -135,6 +135,7 @@ after that you will need to restart the framework (kill the process and start it
 * Avahi search for HTTP services labeled say "remote" via ethernet (BT/LAN or Wifi). MythTV/Elisa and OOPresentation can develop their own html/flash/javascript/etc. "remotes" to hearts content without fine-grain syncing every change of code/GUI/API with your "Openmoko Remote App". Avahi/HTTP also lets desktop/laptop browsers to control "remotes"; this means a bigger community.
 * Have one Neo work as a keyboard for another Neo (which becomes the screen)! (should be possible even now i guess)
 * Change the icons on the mouse screen, so they are oriented as one's mouse would be. Right now the left mouse button is on the left, which is good. However, the image of the mouse is facing the user and the left mouse button is to the right of the image.
+* To improve on the current 'crude' gestures, have it recognize many of the motions used in sign-language (not fingerspelling).
 * '''Add your wish here'''
 
 ==Roadmap==
