/* Modified USB cable to inject power while in host mode */

--- a/Specialized_USB_cables.mw
+++ b/Specialized_USB_cables.mw
@@ -1,6 +1,31 @@
 {{note|work in progress}}
 
-=== Modified USB cable to inject power while in host mode ===
+== Attaching the Neo (acting as a USB host) to a USB device ==
+
+The USB port (5 position mini type B jack) on the Neo 1973 and Neo FreeRunner can be both a USB device or a USB host. The provided cable (5 position mini type B plug to type A plug) is used when attaching the Neo to a USB host.
+
+A specialized cable is required when attaching the Neo to a USB device.
+
+Alternately, an adapter capable of connecting two type A plugs will allow attaching the provided USB cable to the USB cable that came with the USB device. This adapter is also known as a gender changer. These can be purchased or made.
+
+=== How to make a mini type B plug to a type A jack cable ===
+
+(picture)
+
+(digikey part number for mini type B plug)
+(digikey part number for type A jack)
+(digikey part number for cable)
+(construction instructions)
+
+==USB cable for inject power while in host mode ==
+
+Attached USB devices may require more current than the 500mA that the FreeRunner can deliver.
+
+A specialized cable is required when attaching the Neo to a USB device.
+
+
+
+=== Modified USB cable to 
 
 Three-headed cables are required if you want to power the FreeRunner / USB device whilst in host mode.  For many uses the FreeRunner provides sufficient power to make such a cable unnecessary. At the moment, you'll have to manufacture this one yourself. You need to make a cable with three ends:
 
