--- a/USB_host.mw
+++ b/USB_host.mw
@@ -15,7 +15,7 @@ Note: You may want to run <code>ifconfig usb0 down</code> prior to switching to 
 
 === Providing power to connected USB devices while in host mode ===
 
-Normally, USB host ports provide power to any connected USB device. In the case of portable handheld devices, this power may be limited. (Usually the battery is sized to power the handheld device alone, and to maximize standby time.) 
+Normally, USB host ports provide power to any connected USB device.
 
 Available power in host mode is the full maximum of 500mA according to USB-specifications on the Neo FreeRunner, and no power is available in host mode on the Neo 1973. If your USB device respects USB-standards and consumes not more than 500mA, you may connect it directly to your Neo FreeRunner.
 
