/* Rejected requests */ Typo

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -221,6 +221,6 @@ I suggest moving the translations to sub-wikis, like the way wikipedia does it. 
 When a requested Wiki Issue is voted for not to be done, it must be moved here, to make sure it won't get continously requested again.
 
 * '''Don't translate the wiki - rejected''' proposed by [[User:Minime|Minime]] August 2007, moved to rejected by [[User:Kempelen|Kempelen]] August 2008: the Documentation Team looks to support the idea.
-* '''Use namespaces to separate user-oriented and developper-oriented content'''. Assuming the default namespace is user-oriented that would exclude developper-oriented page from searches. And it can't be done purely in the wiki, it needs admin time. Better to use categories and a prefix in the page name (like BlendeWiki).
+* '''Use namespaces to separate user-oriented and developper-oriented content'''. Assuming the default namespace is user-oriented that would exclude developper-oriented pages from searches (unless the user ticks the box, but who does ?). And it can't be done purely in the wiki, it needs admin time. Better to use categories and a prefix in the page name (like BlendeWiki).
 
 [[Category:Help]]
