/* DolfjeBot1 proposals */ Add section "Navigation templates"

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -187,6 +187,8 @@ Applications category contains subcategories for various application groups, lik
 
 Basic End User and Advanced End User categories may need to be created instead User, which is not enough specific term. [[User:Kempelen|Kempelen]]
 
+== Navigation templates ==
+
 == DolfjeBot1 proposals ==
 Their is a bot on the openmoko wiki that's controlled by [[User:Dolfje]]. If you have tasks for the bot, please put them [[User:DolfjeBot1|here]].
 
