/* How to make a mini type B plug to a type A jack cable */

--- a/Specialized_USB_cables.mw
+++ b/Specialized_USB_cables.mw
@@ -10,12 +10,27 @@ Alternately, an adapter capable of connecting two type A plugs will allow attach
 
 === How to make a mini type B plug to a type A jack cable ===
 
-(picture)
+(picture, as soon as I build it)
 
-(digikey part number for mini type B plug)
-(digikey part number for type A jack)
-(digikey part number for cable)
-(construction instructions)
+Parts list:
+
+* Mini type B plug: Digi-Key Part Number H2958-ND
+* type A jack: I have not yet been able to find a source for these. Meanwhile, use the jack from a standard USB extension cord e.g. 
+* Cable: Ideally, the data lines should be twisted and 28 AWG, the power lines should be 20 or 28 AWG, e.g. part number 49248 from Hitachi Cable [[http://www.hcm.hitachi.com/electronic_round_cable/bulk-usb-cable.shtml]]
+
+Construction instructions:
+
+(TBA)
+
+=== Ready-made mini type B plug to a type A jack cable ===
+
+[[http://www.jaykang.com/usbafetousbm1.html]]
+USB A-Type Female to USB Mini-B Type 5 Pin Male Adapter
+http://us.st12.yimg.com/us.st.yimg.com/I/yhst-25796116032680_2011_55823488
+
+http://www.jaykang.com/usbtyfetotyf.html
+USB Type A Female to Female Gender Changer
+http://us.st12.yimg.com/us.st.yimg.com/I/yhst-25796116032680_2011_56525956
 
 === How to make a type B jack to a type A jack adapter (gender changer) ===
 
