/* How to make a type B jack to a type A jack adapter (gender changer) */

--- a/Specialized_USB_cables.mw
+++ b/Specialized_USB_cables.mw
@@ -32,7 +32,7 @@ http://www.jaykang.com/usbtyfetotyf.html
 USB Type A Female to Female Gender Changer
 http://us.st12.yimg.com/us.st.yimg.com/I/yhst-25796116032680_2011_56525956
 
-=== How to make a type B jack to a type A jack adapter (gender changer) ===
+=== How to make a type A jack to a type A jack adapter (gender changer) ===
 
 This community provided instruction shows how to build an adapter from a USB socket salvaged from a computer motherboard.
 
