*Empty MediaWiki Message*

--- a/Specialized_USB_cables.mw
+++ b/Specialized_USB_cables.mw
@@ -4,9 +4,18 @@
 
 The USB port (5 position mini type B jack) on the Neo 1973 and Neo FreeRunner can be both a USB device or a USB host. The provided cable (5 position mini type B plug to type A plug) is used when attaching the Neo to a USB host.
 
-A specialized cable is required when attaching the Neo to a USB device.
+A specialized cable is required when attaching the Neo to a USB device, which provides a USB type A jack at the end.
 
-Alternately, an adapter capable of connecting two type A plugs will allow attaching the provided USB cable to the USB cable that came with the USB device. This adapter is also known as a gender changer. These can be purchased or made.
+(picture)
+
+Alternately, an adapter capable of connecting two type A plugs will allow attaching the provided USB cable to the USB cable that came with the USB device. This adapter is also known as a gender changer. 
+
+(picture)
+
+=== Ready-made mini type B plug to a type A jack cable ===
+
+You can buy [[http://www.jaykang.com/usbafetousbm1.html this]] ready-made USB A-Type Female to USB Mini-B Type 5 Pin Male Adapter.
+[[Image:jaykang_usbafetousbm1.jpg]]
 
 === How to make a mini type B plug to a type A jack cable ===
 
@@ -15,22 +24,17 @@ Alternately, an adapter capable of connecting two type A plugs will allow attach
 Parts list:
 
 * Mini type B plug: Digi-Key Part Number H2958-ND
-* type A jack: I have not yet been able to find a source for these. Meanwhile, use the jack from a standard USB extension cord e.g. 
-* Cable: Ideally, the data lines should be twisted and 28 AWG, the power lines should be 20 or 28 AWG, e.g. part number 49248 from Hitachi Cable [[http://www.hcm.hitachi.com/electronic_round_cable/bulk-usb-cable.shtml]]
+* type A jack: I have not yet been able to find a source for these. Meanwhile, use the jack from a standard USB extension cord
+* Cable: Ideally, the data lines should be twisted and 28 AWG, the power lines should be 20 or 28 AWG, e.g. [[http://www.hcm.hitachi.com/electronic_round_cable/bulk-usb-cable.shtml part number 49248 ]] from Hitachi Cable 
 
 Construction instructions:
 
 (TBA)
 
-=== Ready-made mini type B plug to a type A jack cable ===
+=== Ready-made type A jack to a type A jack adapter (gender changer) ===
 
-[[http://www.jaykang.com/usbafetousbm1.html]]
-USB A-Type Female to USB Mini-B Type 5 Pin Male Adapter
-http://us.st12.yimg.com/us.st.yimg.com/I/yhst-25796116032680_2011_55823488
-
-http://www.jaykang.com/usbtyfetotyf.html
-USB Type A Female to Female Gender Changer
-http://us.st12.yimg.com/us.st.yimg.com/I/yhst-25796116032680_2011_56525956
+You can buy [[http://www.jaykang.com/usbtyfetotyf.html this]] ready-made USB Type A Female to Female Gender Changer.
+[[Image:jaykang_usbtyfetotyf.jpg]]
 
 === How to make a type A jack to a type A jack adapter (gender changer) ===
 
