/* How to make a mini type B plug to a type A jack cable */

--- a/Specialized_USB_cables.mw
+++ b/Specialized_USB_cables.mw
@@ -23,9 +23,9 @@ You can buy [[http://www.jaykang.com/usbafetousbm1.html this]] ready-made USB A-
 
 Parts list:
 
-* Mini type B plug: Digi-Key Part Number H2958-ND
+* Mini type B plug: Digi-Key [[http://search.digikey.com/scripts/DkSearch/dksus.dll?Detail?name=H2958-ND H2958-ND]]
 * type A jack: I have not yet been able to find a source for these. Meanwhile, use the jack from a standard USB extension cord
-* Cable: Ideally, the data lines should be twisted and 28 AWG, the power lines should be 20 or 28 AWG, e.g. [[http://www.hcm.hitachi.com/electronic_round_cable/bulk-usb-cable.shtml part number 49248 ]] from Hitachi Cable 
+* Cable: Ideally, the data lines should be twisted and 28 AWG, the power lines should be 20 or 28 AWG, e.g. Hitachi Cable [[http://www.hcm.hitachi.com/electronic_round_cable/bulk-usb-cable.shtml 49248 ]]
 
 Construction instructions:
 
