/* Navigation templates */ Summarize the current issues with navigation templates

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -189,6 +189,29 @@ Basic End User and Advanced End User categories may need to be created instead U
 
 == Navigation templates ==
 
+Exemples: [[Template:Om_2008.8]], [[Template:OM2007.2]]
+
+These are most useful to present small sets of chronological or otherwise 
+well ordered information items. For example, it's obvious to offer navigation 
+templates between these articles:
+* Openmoko produced smartphones {GTA01 Neo 1973, GTA02 Neo FreeRunner, GTA 03 
+(speculative)}
+* Distributions {2007.1, 2007.2, 2008.8 ASU, 2008.9, FSO, SHR, Qtopia, Debian}
+
+In effect navigation templates create a subset of important pages presented sequentially. This corresponds more or less to a chapter in the user manual. We should not force them where they cannot create a CONSISTENT  forth-and-back navigation between a GROUP OF PAGES.
+
+=== Issues ===
+* The [[Distributions]] page feature a non-templated navigation box
+* We should name these templates distinctly. I suggest using a prefix like "NavBox:".
+* Visual design is by hand (not CSS), and not beautiful
+* Need to test positioning at bottom of article.
+
+=== References ===
+http://en.wikipedia.org/wiki/Wikipedia:Navigation_templates
+http://en.wikipedia.org/wiki/Wikipedia:Categories,_lists,_and_series_boxes
+
+[http://lists.openmoko.org/pipermail/documentation/2008-August/000405.html First discussion in the mailing list] (Note: in the middle of a thread about left navboxes)
+
 == DolfjeBot1 proposals ==
 Their is a bot on the openmoko wiki that's controlled by [[User:Dolfje]]. If you have tasks for the bot, please put them [[User:DolfjeBot1|here]].
 
