--- a/The_USB_Control_Device_Class_Abstract_Control_Model_-_CDC_ACM.mw
+++ b/The_USB_Control_Device_Class_Abstract_Control_Model_-_CDC_ACM.mw
@@ -25,3 +25,4 @@ See the [[MacOS_X#USB_Serial|USB Serial section in the MacOS X article]].
 [[Category:Technical  ]]
 [[Category:Hardware]]
 [[Category:Documentation]]
+[[Category:USB]]
