/* Daily "testing" and "unstable" official repositories */ Add section on the base/empty image

--- a/Download.mw
+++ b/Download.mw
@@ -33,9 +33,10 @@ http://downloads.openmoko.org/releases/Om2008.8/
 ==== "stable" for Neo 1973 ====
 There are no builds yet
 
-=== Daily "testing" and "unstable" official repositories ===
+==== Daily "testing" and "unstable" official repositories ====
 
 See [http://lists.openmoko.org/pipermail/community/2008-August/027997.html "Repository and Images" announcement] for details on other "Base image", "testing" and "unstable".
+
 ==== howto ====
 
 Create /etc/opkg/testing.conf
@@ -46,6 +47,12 @@ src/gz testing-i686 http://downloads.openmoko.org/repository/testing/i686
 src/gz testing-neo http://downloads.openmoko.org/repository/testing/neo1973
 src/gz testing-gta02 http://downloads.openmoko.org/repository/testing/om-gta02
 </pre>
+
+== Om "base / empty" image  ==
+
+This does not have any applications preinstalled other than settings and installer. 
+It is not stable for now.
+Get it by checking out the ''org.openmoko.dev'' branch.
 
 === Om 2007.2 images (GTK) ===
 {{Main|Om 2007.2}}
