/* Om "base / empty" image */ Fix section level

--- a/Download.mw
+++ b/Download.mw
@@ -48,9 +48,9 @@ src/gz testing-neo http://downloads.openmoko.org/repository/testing/neo1973
 src/gz testing-gta02 http://downloads.openmoko.org/repository/testing/om-gta02
 </pre>
 
-== Om "base / empty" image  ==
+=== Om "base / empty" image  ===
 
-This does not have any applications preinstalled other than settings and installer. 
+This one does not have any applications preinstalled other than settings and installer. 
 It is not stable for now.
 Get it by checking out the ''org.openmoko.dev'' branch.
 
