/* "stable" releases for Neo FreeRunner */ Name the branch, reword first release presentation

--- a/Download.mw
+++ b/Download.mw
@@ -19,13 +19,14 @@ See {{Main|Om 2008.8}} for more details.
 ==== "stable" releases for Neo FreeRunner ====
 
 The official updates for the "stable" version of 2008.8 have been setup (see [http://lists.openmoko.org/pipermail/community/2008-August/027997.html announcement]).
+They are based on the branch ''org.openmoko.asu.stable''.
 
-Latest "stable" release (may be updated daily): 
+Latest release (may be updated daily): 
 http://downloads.openmoko.org/releases/Om2008.8-update/
 * Root FS images are like: YYYYMMDD-asu-stable-rootfs.rootfs.jffs2 
 * Kernel images are like:  YYYYMMDD-asu-stable-uImage.bin
 
-Previous initial release :
+The first Om 2008.8 release was made on 8/8/08 and is still available at:
 http://downloads.openmoko.org/releases/Om2008.8/
 * Root FS files are like: Om2008.8-gta02-20080808.rootfs.jffs2 
 * Kernel files are like:  Om2008.8-gta02-20080808.uImage.bin
