/* Distributions and installation */ Trying to clarify the stable / dev branches

--- a/Download.mw
+++ b/Download.mw
@@ -12,35 +12,34 @@ In most cases you will download a Root FileSystem and a Kernel to flash into you
 
 If you want to install a system to a microSD card, see [[Booting from SD]].
 
-=== Om 2008.8 "stable" images (a.k.a ASU) ===
+=== Om 2008.8 images (ASU) ===
 
-See {{Main|Om 2008.8}} for more details.
+These images are based on the branch ''org.openmoko.asu.stable''. They are the ASU distribution. Sorry, there are no build for the Neo 1973 yet, only the FreeRunner.
+The content of these images is presented in the main {{Main|Om 2008.8}} page.
 
-==== "stable" releases for Neo FreeRunner ====
-
-The official updates for the "stable" version of 2008.8 have been setup (see [http://lists.openmoko.org/pipermail/community/2008-August/027997.html announcement]).
-They are based on the branch ''org.openmoko.asu.stable''.
-
-Latest release (may be updated daily): 
+The current head, which is updated daily, is at:
 http://downloads.openmoko.org/releases/Om2008.8-update/
 * Root FS images are like: YYYYMMDD-asu-stable-rootfs.rootfs.jffs2 
 * Kernel images are like:  YYYYMMDD-asu-stable-uImage.bin
 
-The first Om 2008.8 release was made on 8/8/08 and is still available at:
+The first Om 2008.8 release was made on 8/8/08 and is still available for historical purposes at:
 http://downloads.openmoko.org/releases/Om2008.8/
 * Root FS files are like: Om2008.8-gta02-20080808.rootfs.jffs2 
 * Kernel files are like:  Om2008.8-gta02-20080808.uImage.bin
 
-==== "stable" for Neo 1973 ====
-There are no builds yet
+Both these images pull updated packages from:
+http://downloads.openmoko.org/repository/Om2008.8/om-gta02/
 
-==== Daily "testing" and "unstable" official repositories ====
+Reference: See [http://lists.openmoko.org/pipermail/community/2008-August/027997.html announcement]).
 
-See [http://lists.openmoko.org/pipermail/community/2008-August/027997.html "Repository and Images" announcement] for details on other "Base image", "testing" and "unstable".
+=== Testing unstable: Om "base / empty" images ===
 
-==== howto ====
+The ''org.openmoko.dev'' branch does not have any applications preinstalled other than settings and installer, and it is really unstable for now.
 
-Create /etc/opkg/testing.conf
+Images for ''testing'' are at:
+http://downloads.openmoko.org/daily/
+
+To get packages from ''testing'', use this ''/etc/opkg/testing.conf'' :
 <pre>
 src/gz testing-all http://downloads.openmoko.org/repository/testing/all
 src/gz testing-arm http://downloads.openmoko.org/repository/testing/armv4t
@@ -49,11 +48,9 @@ src/gz testing-neo http://downloads.openmoko.org/repository/testing/neo1973
 src/gz testing-gta02 http://downloads.openmoko.org/repository/testing/om-gta02
 </pre>
 
-=== Om "base / empty" image  ===
+''unstable'' comes from the same branch, compiled with the AUTOREV flag. There are no images, but packages are at http://downloads.openmoko.org/repository/unstable/
 
-This one does not have any applications preinstalled other than settings and installer. 
-It is not stable for now.
-Get it by checking out the ''org.openmoko.dev'' branch.
+Reference: See [http://lists.openmoko.org/pipermail/community/2008-August/027997.html "Repository and Images" announcement] for details on other "Base image", "testing" and "unstable".
 
 === Om 2007.2 images (GTK) ===
 {{Main|Om 2007.2}}
