/* Om 2008.8 images (ASU) */ Fix link to  main 2008.8

--- a/Download.mw
+++ b/Download.mw
@@ -15,7 +15,7 @@ If you want to install a system to a microSD card, see [[Booting from SD]].
 === Om 2008.8 images (ASU) ===
 
 These images are based on the branch ''org.openmoko.asu.stable''. They are the ASU distribution. Sorry, there are no build for the Neo 1973 yet, only the FreeRunner.
-The content of these images is presented in the main {{Main|Om 2008.8}} page.
+The content of these images is presented at: {{Main|Om 2008.8}}
 
 The current head, which is updated daily, is at:
 http://downloads.openmoko.org/releases/Om2008.8-update/
