/* Updating from other people's changes */

--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -51,6 +51,10 @@ Or under the SHR root directory:
 
  $ svn update
 
+If you want to update everything (FSO, bitbake and SHR), from the top directory:
+
+  $ make update
+
 = Old way =
 == Building openmoko-dialer3 ==
 Currently this is the only package of any size being developed for SHR, and it's the only one with any instructions.  If you start another SHR project (please check with [[User:Wurp|Bobby]] before starting one), put instructions for working on the project here!
