/* Linux Kernel Support */

--- a/USB_Networking.mw
+++ b/USB_Networking.mw
@@ -37,7 +37,15 @@ Your Linux desktop/laptop needs to have suitable support, in particular, you wil
 * CONFIG_USB_USBNET
 * CONFIG_USB_NET_CDCETHER
 
-Both USB networking options are available in the ''Device Drivers -> USB support -> USB Network Adapters'' or ''Device Drivers -> Network Device Support -> USB Network Adapters -> Multipurpose USB Networking Framework''. For more info see the [http://www.linux-usb.org/usbnet/ usbnet driver homepage].
+Both USB networking options are available in the 
+
+ ''Device Drivers -> USB support -> USB Network Adapters'' 
+
+or 
+
+ ''Device Drivers -> Network Device Support -> USB Network Adapters -> Multipurpose USB Networking Framework''. 
+
+For more info see the [http://www.linux-usb.org/usbnet/ usbnet driver homepage].
 
 It can be complex to set all the correct options for masquerading in the kernel if they are not turned on.  This could be detailed further.
 
