--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -15,7 +15,7 @@ There is a new (much simpler) way to build SHR that is under construction right 
  $ cd shr-unstable
  $ make image
 
-''make setup'' will download SHR in the ''shr'' directory (SHR root directory from now on).
+''make setup'' will download FSO, bitbake and SHR in the ''shr'' directory (SHR root directory from now on).
 
 === Set up your local.conf ===
 
