/* Known Issues */  Use resolvconf dns with wifi dhcp

--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -102,6 +102,18 @@ and add <tt>usb*</tt> above <tt>eth*</tt> in <tt>/etc/resolvconf/interface-order
 
 }}
 
+{{Note| '''Solusion:''' Steps to add missing scripts: <br>
+<code>touch /etc/resolvconf/run/enable-updates</code><br>
+<code>cd /etc ; rm resolv.conf ; ln -s /etc/resolvconf/run/resolv.conf .</code><br>
+<code>mkdir /lib/resolvconf/ ; cd /lib/resolvconf/</code><br>
+<code><nowiki>wget http://kopparv34.mine.nu/list-records</nowiki></code><br>
+Edit <code>/etc/network/interfaces</code> and remove the lines:<br>
+<code>       network 192.168.0.0</code><br>
+<code>       gateway 192.168.0.200</code><br>
+If we need to use the usb network more then just locally from the computer in the other end of the USB-cable, login with ssh and add a default route like this:<br>
+<code>route add default gateway 192.168.0.200</code>
+}}
+
 * Usb-networking will not work until rebooted after initial boot.
 
 '''Usability''' 
