/* Om 2008.8 images (ASU) */ Corrected the image names

--- a/Download.mw
+++ b/Download.mw
@@ -19,8 +19,8 @@ The content of these images is presented at: {{Main|Om 2008.8}}
 
 The current head, which is updated daily, is at:
 http://downloads.openmoko.org/releases/Om2008.8-update/
-* Root FS images are like: YYYYMMDD-asu-stable-rootfs.rootfs.jffs2 
-* Kernel images are like:  YYYYMMDD-asu-stable-uImage.bin
+* Root FS images are like: Om2008.8-gta02-YYYYMMDD.rootfs.jffs2
+* Kernel images are like:  Om2008.8-gta02-YYYYMMDD.uImage.bin
 
 The first Om 2008.8 release was made on 8/8/08 and is still available for historical purposes at:
 http://downloads.openmoko.org/releases/Om2008.8/
