/* Known Issues */  one resolvconf

--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -102,7 +102,7 @@ and add <tt>usb*</tt> above <tt>eth*</tt> in <tt>/etc/resolvconf/interface-order
 
 }}
 
-{{Note| '''Solusion:''' Steps to add missing scripts: <br>
+{{Note| '''Solusion:''' Steps to add missing resolvconf script: <br>
 <code>touch /etc/resolvconf/run/enable-updates</code><br>
 <code>cd /etc ; rm resolv.conf ; ln -s /etc/resolvconf/run/resolv.conf .</code><br>
 <code>mkdir /lib/resolvconf/ ; cd /lib/resolvconf/</code><br>
