/* Developing with MokoMakefile */

--- a/MokoMakefile.mw
+++ b/MokoMakefile.mw
@@ -315,8 +315,10 @@ If you want to modify applications instead of the openmoko toolchain, this is wh
   cd tmp/work/armv4t-linux/openmoko-messages-0.0.1+svnnow-r2_2276/openmoko-messages/
   ''...make the changes...''
   cd -
+  bitbake -c compile openmoko-messages
   bitbake -c build openmoko-messages
 
+Note: The compile step is only necessary if you already had the package compiled before patching it.
 Note: if you just use <tt>bitbake openmoko-messages</tt> it will remove the sources after building!
 
 Then continue with MokoMakefile usage.
