/* Sorgenti ufficiali (tarballs) */

--- a/OpenEmbedded%2Fit.mw
+++ b/OpenEmbedded%2Fit.mw
@@ -20,7 +20,7 @@ La branch ufficiale per Openmoko del database OpenEmbedded puo' essere trovata a
 
 === Sorgenti ufficiali (tarballs) ===
 
-Quando bitbake compila un pacchetto OpenEmbedded, scarica il sorgente originale del progetto ufficiale (ad esempio il kernel Linux), e applica delle patches da internet. Scaricati i sorgenti bitbake applica una serie di patches all'albero. Queste patches possono essere state scaricate da internet oppure contenute nel repsitory metadata di OpenEmbedded. I sorgenti non patchati sono disponibili all'indirizzo [http://downloads.openmoko.org/sources/].
+Quando bitbake compila un pacchetto OpenEmbedded, scarica il sorgente originale del progetto ufficiale (ad esempio il kernel Linux), e applica delle patches da internet. Scaricati i sorgenti bitbake applica una serie di patches all'albero. Queste patches possono essere state scaricate da internet oppure contenute nel repsitory metadata di OpenEmbedded. I sorgenti non patchati sono disponibili all'indirizzo http://downloads.openmoko.org/sources/.
 
 {{todo|finire articolo}}
 
