*Empty MediaWiki Message*

--- a/OpenEmbedded%2Fit.mw
+++ b/OpenEmbedded%2Fit.mw
@@ -6,7 +6,7 @@ Openmoko, la nostra distribuzione è creata usando OpenEmbedded.  OpenEmbedded p
 * Generare (cross-compilazione) pacchetti software per più sistemi embedded.
 * Gestire diverse architetture hardware, e supportare release multiple per queste architetture. 
 
-Per maggiori informazioni visita il [http://www.openembedded.org/ Open Embedded] sito.
+Per maggiori informazioni visita il sito [http://www.openembedded.org/ Open Embedded].
 
 == Generare la distribuzione Openmoko con OpenEmbedded ==
 
