--- a/ReMoko.mw
+++ b/ReMoko.mw
@@ -50,7 +50,7 @@ after that you will need to restart the framework (kill the process and start it
 * The keys bellow don't exist by default in the Illume/qtopia keyboard's, to add the keys to a profile you have to write it.
   Allowed Keys:
    f1-f12
-   win (plus any letter or number, the f key is not allowed it the 'win' key, due a small bug)
+   win (plus any letter or number, the f key is not allowed whit the 'win' key, due a small bug)
 
 ===Using Gestures===
 * To use [[gestures]] to send events, you just need to install the gestures package (no need to start the gestures listener). You can also train the gestures.
