Rewording the mixed feed warning.

--- a/Users_Repositories.mw
+++ b/Users_Repositories.mw
@@ -1,6 +1,6 @@
 For information about the official downloads and distributions, see [[Downloads]]
 
- Please note that adding feeds can [http://lists.openmoko.org/pipermail/support/2008-August/002227.html screw your system up].
+{{Warning|Never add feeds which are not for your installed distribution. Mixing feeds will [http://lists.openmoko.org/pipermail/support/2008-August/002227.html break your system].}}
 
 === Angstrom Repository ===
 
